// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageLevelBanner /> Brand story renders snapshot 1`] = `
<aside
  class="banner banner--brand"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="1"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div>
    <h3
      class="heading heading--size-title-md heading--brand"
    >
      New curriculum updates are available for one or more of your courses.
    </h3>
    <p
      class="text text--sm text--neutral-medium"
    >
      Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
       
      <button
        class="clickable-style clickable-style--link clickable-style--neutral button button--link"
        data-bootstrap-override="clickable-style-link"
        type="button"
      >
        click into the course.
      </button>
    </p>
  </div>
</aside>
`;

exports[`<PageLevelBanner /> BrandDismissable story renders snapshot 1`] = `
<aside
  class="banner banner--brand banner--dismissable"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="7"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div>
    <h3
      class="heading heading--size-title-md heading--brand"
    >
      New curriculum updates are available for one or more of your courses.
    </h3>
    <p
      class="text text--sm text--neutral-medium"
    >
      Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
       
      <button
        class="clickable-style clickable-style--link clickable-style--neutral button button--link"
        data-bootstrap-override="clickable-style-link"
        type="button"
      >
        click into the course.
      </button>
    </p>
  </div>
  <button
    class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon banner__close-btn"
    data-bootstrap-override="clickable-style-icon"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="8"
      >
        dismiss notification
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
</aside>
`;

exports[`<PageLevelBanner /> Error story renders snapshot 1`] = `
<aside
  class="banner banner--error"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="4"
    >
      error
    </title>
    <use
      xlink:href="test-file-stub#dangerous"
    />
  </svg>
  <div>
    <h3
      class="heading heading--size-title-md heading--error"
    >
      New curriculum updates are available for one or more of your courses.
    </h3>
    <p
      class="text text--sm text--neutral-medium"
    >
      Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
       
      <button
        class="clickable-style clickable-style--link clickable-style--neutral button button--link"
        data-bootstrap-override="clickable-style-link"
        type="button"
      >
        click into the course.
      </button>
    </p>
  </div>
</aside>
`;

exports[`<PageLevelBanner /> ErrorDismissable story renders snapshot 1`] = `
<aside
  class="banner banner--error banner--dismissable"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="13"
    >
      error
    </title>
    <use
      xlink:href="test-file-stub#dangerous"
    />
  </svg>
  <div>
    <h3
      class="heading heading--size-title-md heading--error"
    >
      New curriculum updates are available for one or more of your courses.
    </h3>
    <p
      class="text text--sm text--neutral-medium"
    >
      Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
       
      <button
        class="clickable-style clickable-style--link clickable-style--neutral button button--link"
        data-bootstrap-override="clickable-style-link"
        type="button"
      >
        click into the course.
      </button>
    </p>
  </div>
  <button
    class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon banner__close-btn"
    data-bootstrap-override="clickable-style-icon"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="14"
      >
        dismiss notification
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
</aside>
`;

exports[`<PageLevelBanner /> NoDescription story renders snapshot 1`] = `
<aside
  class="banner banner--brand"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="5"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div>
    <h3
      class="heading heading--size-title-md heading--brand"
    >
      New curriculum updates are available for one or more of your courses.
    </h3>
  </div>
</aside>
`;

exports[`<PageLevelBanner /> NoTitle story renders snapshot 1`] = `
<aside
  class="banner banner--brand"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="6"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div>
    <p
      class="text text--sm text--neutral-medium"
    >
      Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
       
      <button
        class="clickable-style clickable-style--link clickable-style--neutral button button--link"
        data-bootstrap-override="clickable-style-link"
        type="button"
      >
        click into the course.
      </button>
    </p>
  </div>
</aside>
`;

exports[`<PageLevelBanner /> Success story renders snapshot 1`] = `
<aside
  class="banner banner--success"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="2"
    >
      success
    </title>
    <use
      xlink:href="test-file-stub#check-circle"
    />
  </svg>
  <div>
    <h3
      class="heading heading--size-title-md heading--success"
    >
      New curriculum updates are available for one or more of your courses.
    </h3>
    <p
      class="text text--sm text--neutral-medium"
    >
      Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
       
      <button
        class="clickable-style clickable-style--link clickable-style--neutral button button--link"
        data-bootstrap-override="clickable-style-link"
        type="button"
      >
        click into the course.
      </button>
    </p>
  </div>
</aside>
`;

exports[`<PageLevelBanner /> SuccessDismissable story renders snapshot 1`] = `
<aside
  class="banner banner--success banner--dismissable"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="9"
    >
      success
    </title>
    <use
      xlink:href="test-file-stub#check-circle"
    />
  </svg>
  <div>
    <h3
      class="heading heading--size-title-md heading--success"
    >
      New curriculum updates are available for one or more of your courses.
    </h3>
    <p
      class="text text--sm text--neutral-medium"
    >
      Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
       
      <button
        class="clickable-style clickable-style--link clickable-style--neutral button button--link"
        data-bootstrap-override="clickable-style-link"
        type="button"
      >
        click into the course.
      </button>
    </p>
  </div>
  <button
    class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon banner__close-btn"
    data-bootstrap-override="clickable-style-icon"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="10"
      >
        dismiss notification
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
</aside>
`;

exports[`<PageLevelBanner /> Warning story renders snapshot 1`] = `
<aside
  class="banner banner--warning"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="3"
    >
      warning
    </title>
    <use
      xlink:href="test-file-stub#warning"
    />
  </svg>
  <div>
    <h3
      class="heading heading--size-title-md heading--warning"
    >
      New curriculum updates are available for one or more of your courses.
    </h3>
    <p
      class="text text--sm text--neutral-medium"
    >
      Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
       
      <button
        class="clickable-style clickable-style--link clickable-style--neutral button button--link"
        data-bootstrap-override="clickable-style-link"
        type="button"
      >
        click into the course.
      </button>
    </p>
  </div>
</aside>
`;

exports[`<PageLevelBanner /> WarningDismissable story renders snapshot 1`] = `
<aside
  class="banner banner--warning banner--dismissable"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="11"
    >
      warning
    </title>
    <use
      xlink:href="test-file-stub#warning"
    />
  </svg>
  <div>
    <h3
      class="heading heading--size-title-md heading--warning"
    >
      New curriculum updates are available for one or more of your courses.
    </h3>
    <p
      class="text text--sm text--neutral-medium"
    >
      Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
       
      <button
        class="clickable-style clickable-style--link clickable-style--neutral button button--link"
        data-bootstrap-override="clickable-style-link"
        type="button"
      >
        click into the course.
      </button>
    </p>
  </div>
  <button
    class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon banner__close-btn"
    data-bootstrap-override="clickable-style-icon"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="12"
      >
        dismiss notification
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
</aside>
`;
